<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave1"
    tools:context=".user_profile">

    <TextView
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Topic07"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/DOB"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:layout_marginTop="92dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_calendar_month_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/DOB"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Profile" />

    <EditText
        android:id="@+id/NIC"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:layout_marginTop="228dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/NIC"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Profile"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/seller_id"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/seller_id"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_bar" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/U_D_button_W"
        android:layout_height="@dimen/U_D_button_H"
        android:text="@string/Update_button"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/delete"
        android:layout_width="@dimen/U_D_button_W"
        android:layout_height="@dimen/U_D_button_H"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/Delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/shop"
        android:layout_width="@dimen/U_D_button_W"
        android:layout_height="@dimen/U_D_button_H"
        android:layout_marginTop="476dp"
        android:text="@string/topic_08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Profile"
        app:layout_constraintVertical_bias="0.0" /><![CDATA[

            />


]]>
</androidx.constraintlayout.widget.ConstraintLayout>