<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave1"
    tools:context=".user_profile">

    <TextView
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Topic07"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/User_profile"
        android:layout_width="@dimen/Photo_Box_width"
        android:layout_height="@dimen/Photo_Box_height"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/todo12" />


    <EditText
        android:id="@+id/Input_Name"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:layout_marginTop="164dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/F_Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Profile"
        app:layout_constraintVertical_bias="0.023"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/User_Phone"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:layout_marginTop="336dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_call_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Phone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Profile"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Input_Address"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/L_Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_bar" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/next_height"
        android:layout_height="@dimen/form_box_width"
        android:text="@string/Topic06"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        tools:ignore="TextContrastCheck" />
            />


</androidx.constraintlayout.widget.ConstraintLayout>