<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave1"
    tools:context=".Registation">


    <EditText
        android:id="@+id/DOB"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_calendar_month_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/DOB"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="100dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />


    <EditText
        android:id="@+id/NIC"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/NIC"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="100dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Topic01"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/Input_Address"
        android:layout_width="@dimen/form_box_height"
        android:layout_height="@dimen/form_box_width"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="text|textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/Alreddyhaveaccount"
        android:layout_width="14dp"
        android:layout_height="63dp"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RgT_btn"
        android:layout_width="@dimen/next_height"
        android:layout_height="@dimen/next_width"
        android:backgroundTint="@color/Button_Green1"
        android:text="@string/Topic01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textColor="@color/Blue_200"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-84dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOB"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>