<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave1"
    tools:context=".Login">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Topic02"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/User_Name"
        android:layout_width="@dimen/Field_Box"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_border"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/User_Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.028"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/Input_password"
        android:layout_width="@dimen/Field_Box"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:background="@drawable/input_border"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="@dimen/padding1"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/User_Name"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/User_Name"
        app:layout_constraintTop_toBottomOf="@+id/User_Name"
        app:layout_constraintVertical_bias="0.337" />

    <Button
        android:id="@+id/RgT_btn"
        android:layout_width="@dimen/Field_Box"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/Topic02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Input_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Input_password"
        app:layout_constraintTop_toBottomOf="@+id/Input_password"
        app:layout_constraintVertical_bias="0.538"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/text_box2"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:autoSizeTextType="uniform"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Input_password"
        app:layout_constraintTop_toBottomOf="@+id/Input_password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/RgT_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RgT_btn"
        app:layout_constraintTop_toBottomOf="@+id/RgT_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up?"
            android:textColor="@color/Blue_200"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/Fb_button"
        android:layout_width="@dimen/Field_Box"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"


        android:background="@drawable/buttonbg1"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/facebook"
        android:text="@string/fb"
        app:layout_constraintBottom_toBottomOf="@+id/Google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Google_button"
        app:layout_constraintTop_toTopOf="@+id/Google_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonbg1"
        android:text="@string/Google"
        app:layout_constraintEnd_toStartOf="@+id/Fb_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="266dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        app:srcCompat="@drawable/c" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:layout_above="@id/bottom_navigation"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />
            />

</androidx.constraintlayout.widget.ConstraintLayout>